<resources>
    <string name="app_name">萬豐·維加斯</string>
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_user">注册用户</string>
    <string name="plz_input_account">请输入账号</string>
    <string name="plz_input_passwd">请输入密码</string>
    <string name="double_click_quite">再次点击退出应用</string>
    <string name="register">注册</string>
    <string name="invite_code">邀请码</string>
    <string name="has_account">已有账号？</string>
    <string name="login_now">立即登录</string>
    <string name="visit_first">我先逛逛</string>
    <string name="password_not_same">两次密码不一致</string>
    <string name="confirm_password">确认密码</string>
</resources>
