<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.android.wjs.ui.LoginVideo
        android:id="@+id/loginvideo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:visibility="gone">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_banner"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_login_white"
                android:orientation="horizontal"
            >
                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_icon"
                    android:padding="12dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_user"/>

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/account"
                    android:paddingLeft="12dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="16sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_login_white"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_icon"
                    android:padding="14dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_passwd"/>
                <EditText
                    android:id="@+id/et_passwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="16sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="30dp"
                android:background="#4dacdc"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="16sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:padding="5dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/tv_go_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:text="@string/register_user"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
            </RelativeLayout>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_banner"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_login_white"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_icon"
                    android:padding="12dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_user"/>

                <EditText
                    android:id="@+id/et_register_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/account"
                    android:paddingLeft="12dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="16sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_login_white"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_icon"
                    android:padding="14dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_passwd"/>
                <EditText
                    android:id="@+id/et_register_passwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="16sp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_login_white"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_icon"
                    android:padding="14dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_passwd"/>
                <EditText
                    android:id="@+id/et_register_passwd_re"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_login_white"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_icon"
                    android:padding="12dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_invite"/>
                <EditText
                    android:id="@+id/et_register_invite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/invite_code"
                    android:paddingLeft="12dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="16sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="30dp"
                android:background="#4dacdc"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/has_account"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/tv_go_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/login_now"
                    android:textColor="#4dacdc"
                    android:textSize="12sp"/>
            </LinearLayout>


        </LinearLayout>
        <TextView
            android:id="@+id/tv_visiter"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/shape_visitor"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/visit_first"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </RelativeLayout>
</RelativeLayout>
